Part_1/todo-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-project-dep-svc
spec:
  type: ClusterIP
  selector:
    app: todo-project-dep
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
